# authservice

./: .gitignore  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yml  example.env  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0fe4b3711163_init.py
src/controllers/: user.py
src/dto/: __init__.py
src/dto/request/: __init__.py  auth.py
src/dto/response/: __init__.py  auth.py
src/models/: __init__.py  base.py  user.py
src/shared/: auth.py  config.py
src/utils/: security.py
src/views/: __init__.py  auth.py  user.py
tests/test_controllers/: test_auth.py
tests/test_security/: test_hash.py  test_jwt.py
